@@ -1,4 +1,5 @@
 	* add a basic return callback registration point
+	* add basic qos support
 
 0.1.5 - Thu Apr 22 11:44:52 EDT 2010
 	* support for properties from Bob Goldstein < bobg at uic dot edu >
